assets/css/115-homepage.css
/* ... */
html {
  font-family: 'Inter', sans-serif;
}

@supports (font-variation-settings: normal) {
  html { font-family: 'Inter var', sans-serif; }
}

picture,
img {
  max-width: 100%;
}

body {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 300;
  background: var(--bg);
  color: var(--txt);
  position: relative;
  scroll-padding-top: var(--nav-height);
  min-height: 100vh;
}

.hidden {
  display: none;
}

h1,h2 {
  font-family: 'Metropolis', sans-serif;
  font-weight: 600;
}

a {
  color: currentColor;
  text-decoration-color: currentColor;
  text-underline-offset: 0.25em;
  text-decoration-thickness: .12em;
  text-decoration-style: dotted;
  transition: font-size .2s,
              text-decoration-color .2s;
}

a.donate,
a:hover,
a:hover:visited {
  text-decoration-color: var(--accent);
}

a:visited {
  text-decoration-color: var(--color-purple-50);
}

.icon {
  height: 32px;
  width: 32px;
}

.download-button {
  transform: translateX(-20px);
}

.btn-donate,
.btn-donate-lg,
.btn-download-inline,
.btn-download-link,
.download-link.btn-download,
a.btn,
button {
  font-size: 1.25rem;
  background: var(--btn-bg, transparent);
  border-radius: 6px;
  border: .12em solid currentColor;
  color: currentColor;
  padding: .5em 3em;
  position: relative;
  transition: font-size .2s;
  text-decoration: none;
}

.btn-donate::before,
.btn-donate-lg::before,
.btn-download-inline::before,
.btn-download-link::before,
.download-link.btn-download::before,
a.btn::before,
button::before {
  content: '';
  position: absolute;
  background: var(--glow);
  border-radius: 50%;
  filter: blur(32px);
  opacity: .25;
  inset: -.25em -5em;
  z-index: -2;
}

.btn-donate::after,
.btn-donate-lg::after,
.btn-download-inline::after,
.btn-download-link::after,
.download-link.btn-download::after,
a.btn::after,
button::after {
  content: '';
  position: absolute;
  background-color: transparent;
  background-image: radial-gradient(circle, var(--accent), var(--color-purple-60) 30%);
  background-size: 400%;
  background-position: center;
  opacity: .5;
  inset: 0;
  z-index: -1;
  transition: all .3s;
}

.download-link.btn-download:hover::after,
a.btn:hover::after,
button:hover::after {
  opacity: .75;
  background-size: 500%;
}

/** HACK for Mozilla Firefox */
@-moz-document url-prefix() {
  .download-link.btn-download::after {
    inset-inline-end: 4px;
  }
}

.download-button .ios-download,
.download-button .linux-arm-download,
.download-button .unrecognized-download,
.download-button .unsupported-download,
.download-button .unsupported-download-osx,
.download-button .nojs-download {
  display: none;
}
.download-button .os_msi,
.download-button .os_winsha1,
.download-button .os_win64,
.download-button .os_linux,
.download-button .os_linux64,
.win7up.x86.x64 .download-button .os_win,
.android .download-button-desktop,
.windows.arm .download-button .os_win,
.linux.arm .download-button .os_linux,
.linux.x86.x64 .download-list .os_linux,
.download-button .os_win,
.download-button .os_osx,
.download-button .os_android,
.download-button .os_ios,
.no-js .download-list,
.other .download-list {
  display: none !important;
}
.win7up.x86.x64 .download-button .os_win64,
.linux .download-button .os_linux,
.linux.x86.x64 .download-button .os_linux64,
.windows .download-button .os_win,
.osx .download-button .os_osx,
.android .download-button .os_android,
.download-button-android .os_android,
.android .download-button-desktop .download-list,
.android .download-button-desktop small.os_win,
.download-button-ios .os_ios,
.ios .download-button .os_ios,
.ios .download-button .ios-download,
.ios .download-button-desktop .download-list,
.other .download-button-android .download-list,
.other .download-button small.os_win {
  display: block !important;
}
.windows.arm .download-button .unsupported-download,
.linux.arm .download-button .linux-arm-download,
.chromeos .download-button .unsupported-download,
.oldwin .download-button .unsupported-download,
.oldmac .download-button .unsupported-download {
  display: block;
  max-width: 250px;
}
.windows.arm .download-button .fx-privacy-link,
.linux.arm .download-button .fx-privacy-link,
.chromeos .download-button .fx-privacy-link,
.oldwin .download-button .fx-privacy-link,
.oldmac .download-button .fx-privacy-link {
  display: none;
}
.android .download-button-desktop .nojs-download,
.ios .download-button-desktop .nojs-download,
.no-js .download-button .nojs-download {
  display: block;
}
.other .download-button .unrecognized-download {
  display: block;
}
.download-button .download-list .os_android.x86,
.download-button .download-other.os_android .api-15,
.android.x86 .download-button .download-list .os_android.armv7up,
.android.x86 .download-button .download-other.os_android .x86 {
  display: none !important;
}
.android.x86 .download-button .download-list .os_android.x86 {
  display: block !important;
}
.android.x86 .download-button .download-other.os_android .armv7up {
  display: inline !important;
}
.windows.sha-1 .download-button .os_win {
  display: none !important;
}
.windows.sha-1 .download-button .os_winsha1 {
  display: block !important;
}

.download-button ul {
  list-style: none;
}

.download-button ul li {
  margin-block: 40px;
}

.site-nav {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  inset-inline: 0;
  display: flex;
  padding-inline: 1rem;
  padding-block: 12px;
  background: var(--nav-bg);
  color: var(--nav-txt);
  border-bottom: 1px solid transparent;
  box-shadow: none;
  height: var(--nav-height);
  backdrop-filter: blur(32px);
  transition: height .2s;
  z-index: 100000;
}

.site-nav .btn-donate::before,
.site-nav .btn-donate-lg::before,
.site-nav .btn-download-inline::before,
.site-nav .btn-download-link::before,
.site-nav .download-link.btn-download::before,
.site-nav a.btn::before,
.site-nav button::before {
  display: none;
}
/* ... */

